tests/specs/run/unstable/http_wss.out
error: Uncaught (in promise) ReferenceError: WebSocketStream is not defined
const wss = new WebSocketStream("ws://127.0.0.1:4513");
            ^
    at [WILDCARD]http_wss.ts:1:13

    info: new WebSocketStream() is an unstable API.
    hint: Run again with `--unstable-net` flag to enable this API.
