tests/specs/run/unstable/http_wss.ts
const wss = new WebSocketStream("ws://127.0.0.1:4513");
